# LoomGUI

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.superpowers/sdd/: final-fix-report.md  progress.md  task-11-report.md  task-12-report.md  task-4-report.md  task-5-report.md  task-7-report.md  task-8-report.md  task-9-report.md  task-fc1-brief.md  task-fc1-report.md  task-fc1-review.diff  task-fc2-brief.md  task-fc2-report.md  task-fc2-review.diff  task-fc3-brief.md  task-fc3-report.md  task-fc3-review.diff  task-fc4-brief.md  task-fc4-report.md  task-fc4-review.diff
docs/: Codex评审.md  README.md  pitfalls.md  v1-showcase-bug2-unity-debug.md  v1c.2-home-verification.md  v1c.3-home-verification.md  v1c.4-home-verification.md  v1d.1-home-verification.md  v1d.2-brainstorm-prep.md  v1d.2-home-verification.md
docs/decisions/: README.md
docs/design/: 00-main-design.md  fence.md  main-design.md
docs/review/: round-1.md  round-2.md  round-3.md  round-4.md  round-5.md
docs/roadmap/: roadmap.md  v1-scope.md  v1d-plan.md  v1x-deferred.md
editor/: init.mjs  init.test.mjs
loomgui_core/: Cargo.toml
loomgui_core/benches/: frame_emit.rs
loomgui_core/examples/: dump_bg.rs  dump_img.rs  dump_interact.rs  dump_pkg.rs  dump_render.rs  dump_scroll.rs  dump_text.rs  dump_tween.rs  v0_snapshot.rs  verify_showcase_pkg.rs
loomgui_core/src/: dump.rs  hit.rs  input.rs  lib.rs  scroll.rs  stage.rs  transform.rs  tween.rs
loomgui_core/src/asset/: mod.rs  texture.rs
loomgui_core/src/layout/: mod.rs
loomgui_core/src/parse/: css.rs  dom.rs  mod.rs  selector.rs
loomgui_core/src/render/: batch.rs  dirty.rs  merge.rs  mesh.rs  mod.rs  node.rs
loomgui_core/src/scene/: dynamic.rs  mod.rs  node.rs  transform.rs
loomgui_core/src/style/: cascade.rs  color_filter.rs  dynamic.rs  mapping.rs  mod.rs  resolved.rs
loomgui_core/src/text/: layout.rs  mod.rs
loomgui_core/tests/: fence_contract.rs  snapshot.rs  v1e_dirty.rs
loomgui_core/tests/fixtures/: FONT_LICENSE.txt  wqy-microhei.LICENSE.txt
loomgui_core/tests/snapshots/: snapshot__cascade_inheritance.snap  snapshot__image_with_texture.snap  snapshot__simple_panel.snap
loomgui_ffi_c/: Cargo.toml  build.rs
loomgui_ffi_c/src/: blob.rs  lib.rs
loomgui_pkg/: Cargo.toml
loomgui_pkg/examples/: gen_atlas_samples.rs
loomgui_pkg/src/: lib.rs  main.rs
loomgui_pkg/tests/: pack.rs
(+144 files in other folders)
