[package]
name = "loomgui_core"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = { version = "0.19", optional = true }
cssparser = { version = "0.34", optional = true }
taffy = { version = "0.5", features = ["serde"] }
ttf-parser = "0.20"
unicode-linebreak = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
# slotmap 1.1.1 已在 Cargo.lock（taffy 间接依赖）。Scene.nodes 用 SlotMap<DefaultKey, Node>：
# 应用层 NodeId(pub u32)（20bit index + 12bit gen，FFI/C# 透明）经 from_ffi/as_ffi 桥接到
# slotmap DefaultKey（详见 scene/node.rs NodeId impl 与 Scene::key_for）。
slotmap = { version = "1.1", features = [] }

[dev-dependencies]
insta = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "frame_emit"
harness = false

[features]
default = ["parse"]
parse = ["dep:scraper", "dep:cssparser"]

# parse-feature-gated targets —— `cargo build/test --no-default-features --all-targets`
# 不会尝试编译这些（地道 Cargo 方式，比 `#![cfg]` 包文件体干净）。
[[test]]
name = "snapshot"
required-features = ["parse"]
